--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🦁</text></svg>">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>cashlion = nicholas</title>
+    <title>cashlion === nicholas</title>
     <meta name="description" content="Hi. My name is Nicholas Hoium and I love the world wide web.">
   </head>
   <body class="min-h-screen bg-white dark:bg-gray-900 dark:text-gray-50">
