--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <meta name="description" content="Hi. My name is Nicholas Hoium and I love the world wide web.">
   </head>
   <body class="min-h-screen bg-white dark:bg-gray-900 dark:text-gray-50">
-    <div id="app" class="min-h-screen flex flex-col justify-between">
+    <div id="app" class="min-h-screen flex flex-col justify-between text-xl md:text-2xl">
       <header class="container mx-auto py-6 w-full flex flex-col md:flex-row items-center justify-center md:justify-between">
         <div>
-          <h1 class="text-3xl lowercase tracking-wide text-black dark:text-white">nicholas hoium</h1>
+          <h1 class="text-3xl lowercase tracking-wide font-semibold text-black dark:text-white">nicholas hoium</h1>
         </div>
         <div class="mt-4 md:mt-0 flex justify-around dark:text-gray-100">
           <a class="mx-2 md:mx-4 pb-1 uppercase tracking-wide text-xs md:text-sm hover:border-b border-twitter" href="https://twitter.com/cashlion" rel="noreferrer" target="_blank" title="Open my Twitter profile in a new tab/window.">Twitter</a>
@@ -22,12 +22,12 @@
       </header>
       <main class="mb-auto mt-4 md:mt-16 container mx-auto px-4 md:px-0 w-full flex flex-col items-start justify-start text-gray-800 dark:text-gray-200">
         <div class="text-xl md:text-3xl">👋</div>
-        <div class="mt-4 md:mt-8 text-sm md:text-base w-full md:w-1/2 text-justify">I am a <span class="font-semibold">Data &amp; Analytics Engineer</span> at <a href="https://www.foundsm.com/" rel="noreferrer" target="_blank" class="font-medium text-green-700 hover:text-black dark:text-green-400 dark:hover:text-white" title="Open the Found SM site in a new tab/window">Found Search Marketing</a> helping businesses of all sizes to become more data-driven. I do this by assisting them with their analytics tracking implementations and setting up data warehouses and reports to consolidate the data from different sources to give them a better overview of their marketing performance. In addition to the client work, I am always looking to build internal tools to help our team focus less on the minutae and more on strategy.</div>
-        <div class="mt-4 text-sm md:text-base w-full md:w-1/2 text-justify">I am on the leadership committee of <a href="https://www.olscnashville.com/" rel="noreferrer" target="_blank" class="font-medium text-red-600 hover:text-black dark:text-red-400 dark:hover:text-white" title="Open the OLSC Nashville site in a new tab/window">OLSC Nashville</a>, where I maintain the website and help to build a place for locals and tourists to cheer on our beloved Reds of Liverpool.</div>
-        <div class="mt-4 text-sm md:text-base w-full md:w-1/2 text-justify">Outside of work, I like to spend time researching new technologies and improving my engineering skills. I am most excited these days by serverless technologies as they allow me to build and deploy without worrying about what packages are installed on a server. To help avoid any technical burnout, I choose to spend a fair bit of my time pursing other hobbies, including home baristaing and plant-based cooking, and consuming all sorts of media, like a lot of media.</div>
-        <div class="mt-4 text-sm md:text-base w-full md:w-1/2 text-justify">Thanks for visiting and for reading this far. I truly hope you have a wonderful day. YNWA</div>
+        <div class="mt-4 md:mt-10 w-full md:w-1/2 text-left leading-8 md:leading-9 font-light">I am a <span class="font-semibold">Data &amp; Analytics Engineer</span> at <a href="https://www.foundsm.com/" rel="noreferrer" target="_blank" class="font-medium text-green-700 hover:text-black dark:text-green-400 dark:hover:text-white" title="Open the Found SM site in a new tab/window">Found Search Marketing</a> helping businesses of all sizes to become more data-driven. I do this by assisting them with their analytics tracking implementations and setting up data warehouses and reports to consolidate the data from different sources to give them a better overview of their marketing performance. In addition to the client work, I am always looking to build internal tools to help our team focus less on the minutae and more on strategy.</div>
+        <div class="mt-6 md:mt-8 w-full md:w-1/2 text-left leading-8 md:leading-9 font-light">I am on the leadership committee of <a href="https://www.olscnashville.com/" rel="noreferrer" target="_blank" class="font-medium text-red-600 hover:text-black dark:text-red-400 dark:hover:text-white" title="Open the OLSC Nashville site in a new tab/window">OLSC Nashville</a>, where I maintain the website and help to build a place for locals and tourists to cheer on our beloved Reds of Liverpool.</div>
+        <div class="mt-6 md:mt-8 w-full md:w-1/2 text-left leading-8 md:leading-9 font-light">Outside of work, I like to spend time researching new technologies and improving my engineering skills. I am most excited these days by serverless technologies as they allow me to build and deploy without worrying about what packages are installed on a server. To help avoid any technical burnout, I choose to spend a fair bit of my time pursing other hobbies, including home baristaing and plant-based cooking, and consuming all sorts of media, like a lot of media.</div>
+        <div class="mt-6 md:mt-8 w-full md:w-1/2 text-left leading-8 md:leading-9 font-light">Thanks for visiting and for reading this far. I truly hope you have a wonderful day. YNWA</div>
       </main>
-      <footer class="mt-8 md:mt-0 container mx-auto w-full py-4 flex flex-col md:flex-row justify-between items-center text-sm text-gray-500">
+      <footer class="mt-8 container mx-auto w-full py-4 flex flex-col md:flex-row justify-between items-center text-sm text-gray-500">
         <div>&copy; <span id="year"></span>. All rights reserved.</div>
       </footer>
     </div>
