--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="mt-6 md:mt-8 w-full md:w-1/2 text-left leading-8 md:leading-9 font-light">Thanks for visiting and for reading this far. I truly hope you have a wonderful day. YNWA</div>
       </main>
       <footer class="mt-8 container mx-auto w-full py-4 flex flex-col md:flex-row justify-between items-center text-sm text-gray-500">
-        <div>&copy; <span id="year"></span>. All rights reserved.</div>
+        <div>&copy; <span id="year"></span>. All rights reserved. <span class="text-white dark:text-gray-900">We all dead, fuck it.</span></div>
       </footer>
     </div>
     <script type="module" src="/main.js"></script>
