--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
           <a class="mx-2 md:mx-4 pb-1 uppercase tracking-wide text-xs md:text-sm hover:border-b border-github dark:border-white" href="http://github.com/cashlion/" rel="noreferrer" target="_blank" title="Open my Github profile in a new tab/window.">Github</a>
           <a class="mx-2 md:mx-4 pb-1 uppercase tracking-wide text-xs md:text-sm hover:border-b border-linkedin" href="https://www.linkedin.com/in/nicholas-hoium/" rel="noreferrer" target="_blank" title="Open my LinkedIn profile in a new tab/window.">LinkedIn</a>
           <a class="mx-2 md:mx-4 pb-1 uppercase tracking-wide text-xs md:text-sm hover:border-b border-letterboxd" href="https://letterboxd.com/cashlion/" rel="noreferrer" target="_blank" title="Open my Letterboxd profile in a new tab/window.">Letterboxd</a>
+          <a class="mx-2 md:mx-4 pb-1 uppercase tracking-wide text-xs md:text-sm hover:border-b border-red-600" href="https://letterboxd.com/cashlion/" rel="noreferrer" target="_blank" title="Open my Last.fm profile in a new tab/window.">Last.fm</a>
         </div>
       </header>
       <main class="mb-auto mt-4 md:mt-16 container mx-auto px-4 md:px-0 w-full flex flex-col items-start justify-start text-gray-800 dark:text-gray-200">
