--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <h1 class="text-3xl lowercase tracking-wide font-semibold text-black dark:text-white">nicholas hoium</h1>
         </div>
         <div class="mt-4 md:mt-0 flex justify-around dark:text-gray-100">
-          <a class="mx-2 md:mx-4 pb-1 uppercase tracking-wide text-xs md:text-sm hover:border-b border-twitter" href="https://twitter.com/cashlion" rel="noreferrer" target="_blank" title="Open my Twitter profile in a new tab/window.">Twitter</a>
+          <a class="mx-2 md:mx-4 pb-1 uppercase tracking-wide text-xs md:text-sm hover:border-b border-mastodon" href="https://mastodon.social/@cashlion" rel="me" target="_blank" title="Open my Mastodon profile in a new tab/window.">Mastodon</a>
           <a class="mx-2 md:mx-4 pb-1 uppercase tracking-wide text-xs md:text-sm hover:border-b border-github dark:border-white" href="http://github.com/cashlion/" rel="noreferrer" target="_blank" title="Open my Github profile in a new tab/window.">Github</a>
           <a class="mx-2 md:mx-4 pb-1 uppercase tracking-wide text-xs md:text-sm hover:border-b border-linkedin" href="https://www.linkedin.com/in/nicholas-hoium/" rel="noreferrer" target="_blank" title="Open my LinkedIn profile in a new tab/window.">LinkedIn</a>
           <a class="mx-2 md:mx-4 pb-1 uppercase tracking-wide text-xs md:text-sm hover:border-b border-letterboxd" href="https://letterboxd.com/cashlion/" rel="noreferrer" target="_blank" title="Open my Letterboxd profile in a new tab/window.">Letterboxd</a>
